Switch to pnpm for all steps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,11 +55,9 @@ jobs:
           cache: pnpm
           node-version: lts/*
       - run: pnpm install --frozen-lockfile
-        # Linting can be skipped
-      - run: npm run lint --if-present
+      - run: pnpm run lint
         if: github.event.inputs.test != 'false'
-        # But not the build script, as semantic-release will crash if this command fails so it makes sense to test it early
-      - run: npm run prepublishOnly --if-present
+      - run: pnpm run prepublishOnly
 
   test:
     needs: build
@@ -98,8 +96,8 @@ jobs:
         with:
           cache: pnpm
           node-version: ${{ matrix.node }}
-      - run: npm install
-      - run: npm test --if-present
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm test
 
   release:
     permissions:
@@ -127,7 +125,7 @@ jobs:
           cache: pnpm
           node-version: lts/*
       - run: pnpm install --frozen-lockfile
-      - run: npm audit signatures
+      - run: pnpm audit signatures
         # Branches that will release new versions are defined in .releaserc.json
         # @TODO remove --dry-run after verifying everything is good to go
       - run: npx semantic-release --dry-run
