--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "rimraf": "^5.0.1",
     "rollup-plugin-styles": "^4.0.0",
     "sanity": "^3.16.1",
+    "semantic-release": "^21.1.1",
     "styled-components": "^5.3.11",
     "typescript": "^5.2.2"
   },
