Add vitest and vite

--- a/package.json
+++ b/package.json
@@ -80,7 +80,9 @@
     "sanity": "^3.16.1",
     "semantic-release": "^21.1.1",
     "styled-components": "^5.3.11",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.3"
   },
   "peerDependencies": {
     "react": "^18",
