--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,33 +49,9 @@ jobs:
       - run: pnpm run prepublishOnly
 
   test:
-    needs: build
-    # The test matrix can be skipped, in case a new release needs to be fast-tracked and tests are already passing on main
-    if: github.event.inputs.test != 'false'
-    runs-on: ${{ matrix.os }}
-    name: Node.js ${{ matrix.node }} / ${{ matrix.os }}
-    strategy:
-      # A test failing on windows doesn't mean it'll fail on macos. It's useful to let all tests run to its completion to get the full picture
-      fail-fast: false
-      matrix:
-        # Run the testing suite on each major OS with the latest LTS release of Node.js
-        os: [macos-latest, ubuntu-latest, windows-latest]
-        node: [lts/*]
-        # It makes sense to also test the oldest, and latest, versions of Node.js, on ubuntu-only since it's the fastest CI runner
-        include:
-          - os: ubuntu-latest
-            # Test the oldest LTS release of Node that's still receiving bugfixes and security patches, versions older than that have reached End-of-Life
-            node: lts/-1
-          - os: ubuntu-latest
-            # Test the actively developed version that will become the latest LTS release next October
-            node: current
+    runs-on: ubuntu-latest
+    name: Test
     steps:
-      # It's only necessary to do this for windows, as mac and ubuntu are sane OS's that already use LF
-      - name: Set git to use LF
-        if: matrix.os == 'windows-latest'
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         name: Install pnpm
@@ -89,12 +65,14 @@ jobs:
       - run: pnpm test
 
   release:
+    needs:
+      - build
+      - test
     permissions:
-      contents: write # to be able to publish a GitHub release
-      issues: write # to be able to comment on released issues
-      pull-requests: write # to be able to comment on released pull requests
-      id-token: write # to enable use of OIDC for npm provenance
-    needs: [build, test]
+      contents: write
+      issues: write
+      pull-requests: write
+      id-token: write
     # only run if opt-in during workflow_dispatch
     if: always() && github.event.inputs.release == 'true' && needs.build.result != 'failure' && needs.test.result != 'failure' && needs.test.result != 'cancelled'
     runs-on: ubuntu-latest
