--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,11 @@
 name: CI & Release
 
 on:
-  # Build on pushes branches that have a PR (including drafts)
   pull_request:
-  # Build on commits pushed to branches without a PR if it's in the allowlist
   push:
     branches: [main]
-  # https://docs.github.com/en/actions/managing-workflow-runs/manually-running-a-workflow
-  workflow_dispatch:
-    inputs:
-      test:
-        description: Run tests
-        required: true
-        default: true
-        type: boolean
-      release:
-        description: Release new version
-        required: true
-        default: false
-        type: boolean
+    tags:
+      - v*
 
 concurrency:
   # On PRs builds will cancel if new pushes happen before the CI completes, as it defines `github.head_ref` and gives it the name of the branch the PR wants to merge into
@@ -64,7 +51,7 @@ jobs:
       - run: pnpm install --frozen-lockfile
       - run: pnpm test
 
-  release:
+  publish:
     needs:
       - build
       - test
@@ -73,15 +60,11 @@ jobs:
       issues: write
       pull-requests: write
       id-token: write
-    # only run if opt-in during workflow_dispatch
-    if: always() && github.event.inputs.release == 'true' && needs.build.result != 'failure' && needs.test.result != 'failure' && needs.test.result != 'cancelled'
     runs-on: ubuntu-latest
-    name: Semantic release
+    name: Publish
     steps:
       - uses: actions/checkout@v3
         with:
-          # Need to fetch entire commit history to
-          # analyze every commit since last release
           fetch-depth: 0
       - uses: pnpm/action-setup@v2
         name: Install pnpm
@@ -93,10 +76,11 @@ jobs:
           node-version: lts/*
       - run: pnpm install --frozen-lockfile
       - run: pnpm audit signatures
-      - run: npx semantic-release
-        # Don't allow interrupting the release step if the job is cancelled, as it can lead to an inconsistent state
-        # e.g. git tags were pushed but it exited before `npm publish`
-        if: always()
+      - run: pnpm publish
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: pnpm publish --publish
+        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
+        env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
