--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,20 +21,26 @@ jobs:
     runs-on: ubuntu-latest
     name: Lint & Build
     steps:
-      - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
         with:
           version: 8.7.0
-      - uses: actions/setup-node@v3
+      - name: Install node
+        uses: actions/setup-node@v3
         with:
           cache: pnpm
           node-version: lts/*
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm run lint
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+      - name: Lint
+        run: pnpm run lint
         if: github.event.inputs.test != 'false'
-      - run: pnpm run prepublishOnly
-      - uses: actions/upload-artifact@v3
+      - name: Build
+        run: pnpm run prepublishOnly
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
         with:
           name: dist
           path: dist/
@@ -44,17 +50,21 @@ jobs:
     runs-on: ubuntu-latest
     name: Test
     steps:
-      - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
         with:
           version: 8.7.0
-      - uses: actions/setup-node@v3
+      - name: Install node
+        uses: actions/setup-node@v3
         with:
           cache: pnpm
           node-version: ${{ matrix.node }}
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm test
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+      - name: Run tests
+        run: pnpm test
 
   publish:
     needs:
@@ -68,29 +78,34 @@ jobs:
     runs-on: ubuntu-latest
     name: Publish
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
         with:
           version: 8.7.0
-      - uses: actions/setup-node@v3
+      - name: Install node
+        uses: actions/setup-node@v3
         with:
           cache: pnpm
           node-version: lts/*
-      - run: pnpm install --frozen-lockfile
-      - uses: actions/download-artifact@v3
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
         with:
           name: dist
           path: dist/
           if-no-files-found: error
-      - run: pnpm audit signatures
-      - run: pnpm publish --ignore-scripts
-        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+      - name: Audit code
+        run: pnpm audit signatures
+      - name: Publish package (dry run)
+        run: pnpm publish --dry-run --ignore-scripts
+        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - run: pnpm publish --dry-run --ignore-scripts
-        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
+      - name: Publish package
+        run: pnpm publish --ignore-scripts
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
