--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,9 @@ permissions:
   contents: read # for checkout
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
-    name: Lint & Build
+    name: Lint
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -36,7 +36,6 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: Lint
         run: pnpm run lint
-        if: github.event.inputs.test != 'false'
       - name: Build
         run: pnpm run prepublishOnly
       - name: Upload build artifacts
@@ -66,10 +65,37 @@ jobs:
       - name: Run tests
         run: pnpm test
 
+  build:
+    runs-on: ubuntu-latest
+    name: Build
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8.7.0
+      - name: Install node
+        uses: actions/setup-node@v3
+        with:
+          cache: pnpm
+          node-version: lts/*
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+      - name: Build
+        run: pnpm run prepublishOnly
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: dist/
+          if-no-files-found: error
+
   publish:
     needs:
-      - build
+      - lint
       - test
+      - build
     permissions:
       contents: write
       issues: write
