--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,18 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+      - name: Read .tool-versions
+        id: versions
+        uses: marocchino/tool-versions-action@v1
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8.7.0
+          version: ${{ steps.versions.outputs.pnpm }}
       - name: Install node
         uses: actions/setup-node@v3
         with:
           cache: pnpm
-          node-version: lts/*
+          node-version: ${{ steps.versions.outputs.nodejs }}
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Lint
@@ -51,15 +54,18 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+      - name: Read .tool-versions
+        id: versions
+        uses: marocchino/tool-versions-action@v1
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8.7.0
+          version: ${{ steps.versions.outputs.pnpm }}
       - name: Install node
         uses: actions/setup-node@v3
         with:
           cache: pnpm
-          node-version: ${{ matrix.node }}
+          node-version: ${{ steps.versions.outputs.nodejs }}
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Run tests
@@ -71,15 +77,18 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+      - name: Read .tool-versions
+        id: versions
+        uses: marocchino/tool-versions-action@v1
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8.7.0
+          version: ${{ steps.versions.outputs.pnpm }}
       - name: Install node
         uses: actions/setup-node@v3
         with:
           cache: pnpm
-          node-version: lts/*
+          node-version: ${{ steps.versions.outputs.nodejs }}
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Build
@@ -106,15 +115,18 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+      - name: Read .tool-versions
+        id: versions
+        uses: marocchino/tool-versions-action@v1
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8.7.0
+          version: ${{ steps.versions.outputs.pnpm }}
       - name: Install node
         uses: actions/setup-node@v3
         with:
           cache: pnpm
-          node-version: lts/*
+          node-version: ${{ steps.versions.outputs.nodejs }}
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Download build artifacts
