--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,12 +137,12 @@ jobs:
       - name: Audit code
         run: pnpm audit signatures
       - name: Publish package (dry run)
-        run: pnpm publish --dry-run --ignore-scripts
+        run: pnpm publish --dry-run --ignore-scripts --no-git-checks
         if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish package
-        run: pnpm publish --ignore-scripts
+        run: pnpm publish --ignore-scripts --no-git-checks
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
