--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -136,6 +136,8 @@ jobs:
           if-no-files-found: error
       - name: Audit code
         run: pnpm audit signatures
+      - name: Authenticate to npm
+        run: echo '//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}' >> .npmrc
       - name: Publish package (dry run)
         run: pnpm publish --dry-run --ignore-scripts --no-git-checks
         if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
