--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,14 +137,10 @@ jobs:
       - name: Audit code
         run: pnpm audit signatures
       - name: Authenticate to npm
-        run: echo '//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}' >> .npmrc
+        run: pnpm config set '//registry.npmjs.org/:_authToken' '${{ secrets.NPM_TOKEN}}'
       - name: Publish package (dry run)
         run: pnpm publish --dry-run --ignore-scripts --no-git-checks
         if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Publish package
         run: pnpm publish --ignore-scripts --no-git-checks
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
