--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sanity-plugin-graphiql",
-  "version": "1.4.3-0",
+  "version": "1.4.4",
   "description": "Add GraphiQL to your Sanity desk",
   "keywords": [
     "sanity",
